tests/invalid/random_choices_wrong_keyword_name/main.py
import random

if __name__ == "__main__":
    xs: list[int] = random.choices([1, 2, 3], probs=[0.1, 0.2, 0.7])
